--- a/style.css
+++ b/style.css
@@ -43,3 +43,9 @@ p3{
     color: #513779;
     background-color: #89c1fa
 }
+h2{
+    font-family: monospace;
+    font-size: 20px;
+    color: #513779;
+    background-color: #89c1fa
+}
